# algo-trading

./: ADVANCED_ML_IMPLEMENTATION_SUMMARY.md  Algorithms.md  CLUSTERING_ANALYSIS_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  MAJORITY_VOTING_GUIDE.md  SYSTEM_SUMMARY.md  advanced_ml_algorithms.py  demo_advanced_ml.py  demo_clusters.py  demo_majority_voting.py  demo_ml_without_pytorch.py  enhanced_portfolio.py  integrate_ml_with_trading.py  main.py  ml_algorithms.py  performance_comparison.py  pyproject.toml  requirements.txt  statistical_clusters.py  strategy_switcher.py  tune_and_cluster.py  tune_and_cluster_no_yaml.py  tune_ml_and_clusters.py  tuning_results.yaml
backtester/: backtest.py  data_handler.py  executor.py  portfolio.py
config/: config.yaml
data/: data.csv  news.csv
news/: __init__.py  news_provider.py
strategies/: basic_ma.py  multi_timeframe.py  statistical_clusters_strategy.py
